# ingestion-google-drive

./: .gitignore  DockerFile  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
appscript/: add_questions.js  add_questons.js  btn_submit.js
ingestion_google_drive/: main.py  requirements.txt
terraform/: .terraform.lock.hcl  provider.tf  run-services.tf  service-account.tf  storage-bucket.tf
